--- a/src/Avenged.Radzen.PageStack.csproj
+++ b/src/Avenged.Radzen.PageStack.csproj
@@ -37,9 +37,9 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Update="README.md">
-		  <Pack>True</Pack>
-		  <PackagePath>\</PackagePath>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
 
